# Spring-2019

./: README.md
assignments/week1/: README.md
assignments/week10/: README.md  hw.cabal
assignments/week10/src/: EnvUnsafe.hs  Lang.hs  LangParserHint.hs
assignments/week10/tests/: LangEvalTest.hs  LangParserTest.hs  Main.hs
assignments/week2/: README.md
assignments/week2/src/: Hw.hs  HwHint.hs
assignments/week2/tests/: Main.hs
assignments/week3/: README.md  hw.cabal
assignments/week3/src/: Hw02.hs
assignments/week3/tests/: IntTests.hs  ListTests.hs  Main.hs  OrderingTests.hs  SetTests.hs  StudentTests.hs  TestBase.hs
assignments/week4/: README.md  hw.cabal
assignments/week4/tests/: HigherOrderTest.hs  LangTest.hs  MapTest.hs  TestBase.hs
assignments/week5/: README.md  hw.cabal
assignments/week5/tests/: EnumAndAllTheThingsTest.hs  EqTest.hs  FunctorTest.hs  Lang0ParserTest.hs  Main.hs  OrdTest.hs  TypeProblemsTest.hs
assignments/week6/: README.md  hw.cabal
assignments/week6/tests/: Main.hs
assignments/week7/: README.md  hw.cabal
assignments/week7/src/: BareBonesLast.hs  PrinterMonad.hs
assignments/week7/tests/: Lang2Test.hs  Main.hs  MonadTest.hs  MonadTestType.hs
assignments/week8/: README.md  week8.cabal
assignments/week8/src/: Bank.hs  ReaderTest.hs  State.hs
assignments/week8/tests/: Lang3Test.hs  Lang3TestTypes.hs  Lang4Test.hs  Lang4TestTypes.hs  Main.hs  (+1 more)
assignments/week9/: README.md  hw.cabal
notes/proof/: Proof.agda  proof.py
project/: BEFORE.md  INSTRUCTIONS.md  ProjectHints.md  README.md
week1/: README.md
(+18 files in other folders)
